--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -72,10 +72,8 @@ doctrine:
 # Swiftmailer Configuration
 swiftmailer:
     transport: "%mailer_transport%"
-    host:      "%mailer_host%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
-    spool:     { type: memory }
 
 fos_user:
     db_driver: orm
@@ -84,3 +82,11 @@ fos_user:
     registration:
         confirmation:
             enabled: true
+            from_email:
+                address:        registration@agroscopic.org
+                sender_name:    Agroscopic Registration
+    resetting:
+        email:
+            from_email:
+                address:        resetting@agroscopic.org
+                sender_name:    Agroscopic Resetting
