--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -69,6 +69,7 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
 
+# FOSUser Configuration
 fos_user:
     db_driver: orm
     firewall_name: main
@@ -84,3 +85,9 @@ fos_user:
             from_email:
                 address:        resetting-password@agroscopic.org
                 sender_name:    Atlas des Agricultures du Monde
+
+# Sluggable Extension
+stof_doctrine_extensions:
+    orm:
+        default:
+            sluggable: true
