--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -2,7 +2,7 @@ imports:
     - { resource: parameters.yml }
     - { resource: security.yml }
     - { resource: services.yml }
-
+    - { resource: @AppBundle/Resources/config/admin.yml }
 
 parameters:
     locale: fr
@@ -58,11 +58,15 @@ doctrine:
         user:     "%database_user%"
         password: "%database_password%"
         charset:  UTF8
-
+        types:
+            json: Sonata\Doctrine\Types\JsonType
     orm:
-        auto_generate_proxy_classes: "%kernel.debug%"
-        naming_strategy: doctrine.orm.naming_strategy.underscore
-        auto_mapping: true
+        entity_managers:
+            default:
+                mappings:
+                    ApplicationSonataUserBundle: ~
+                    SonataUserBundle: ~
+                    # FOSUserBundle: ~
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -74,7 +78,7 @@ swiftmailer:
 fos_user:
     db_driver: orm
     firewall_name: main
-    user_class: AppBundle\Entity\User
+    user_class: Sonata\UserBundle\Entity\BaseUser # Voir si on peut mettre AppBundle\Entity\User
     registration:
         confirmation:
             enabled: true
@@ -86,6 +90,11 @@ fos_user:
             from_email:
                 address:        resetting-password@agroscopic.org
                 sender_name:    Atlas des Agricultures du Monde
+    group:
+        group_class:   Sonata\UserBundle\Entity\BaseGroup
+        group_manager: sonata.user.orm.group_manager
+    service:
+        user_manager: sonata.user.orm.user_manager
 
 # Sluggable Extension
 stof_doctrine_extensions:
@@ -103,11 +112,17 @@ sonata_block:
 
         #sonata.admin_doctrine_orm.block.audit:
         #    contexts:   [admin]
-
-        sonata.block.service.text:
+        sonata.user.block.menu:    # used to display the menu in profile pages
+        sonata.user.block.account: # used to display menu option (login option)
+        sonata.block.service.text: # used to if you plan to use Sonata user routes
         sonata.block.service.rss:
 
         # Some specific block from the SonataMediaBundle
         #sonata.media.block.media:
         #sonata.media.block.gallery:
         #sonata.media.block.feature_media:
+
+# Sonata User
+sonata_user:
+    security_acl: true
+    manager_type: orm
