--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -61,12 +61,8 @@ doctrine:
         types:
             json: Sonata\Doctrine\Types\JsonType
     orm:
-        entity_managers:
-            default:
-                mappings:
-                    ApplicationSonataUserBundle: ~
-                    SonataUserBundle: ~
-                    # FOSUserBundle: ~
+        auto_generate_proxy_classes: "%kernel.debug%"
+        auto_mapping: true
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -78,7 +74,7 @@ swiftmailer:
 fos_user:
     db_driver: orm
     firewall_name: main
-    user_class: Sonata\UserBundle\Entity\BaseUser # Voir si on peut mettre AppBundle\Entity\User
+    user_class: AppBundle\Entity\User
     registration:
         confirmation:
             enabled: true
@@ -90,11 +86,6 @@ fos_user:
             from_email:
                 address:        resetting-password@agroscopic.org
                 sender_name:    Atlas des Agricultures du Monde
-    group:
-        group_class:   Sonata\UserBundle\Entity\BaseGroup
-        group_manager: sonata.user.orm.group_manager
-    service:
-        user_manager: sonata.user.orm.user_manager
 
 # Sluggable Extension
 stof_doctrine_extensions:
@@ -112,8 +103,8 @@ sonata_block:
 
         #sonata.admin_doctrine_orm.block.audit:
         #    contexts:   [admin]
-        sonata.user.block.menu:    # used to display the menu in profile pages
-        sonata.user.block.account: # used to display menu option (login option)
+        #sonata.user.block.menu:    # used to display the menu in profile pages
+        #sonata.user.block.account: # used to display menu option (login option)
         sonata.block.service.text: # used to if you plan to use Sonata user routes
         sonata.block.service.rss:
 
@@ -122,7 +113,3 @@ sonata_block:
         #sonata.media.block.gallery:
         #sonata.media.block.feature_media:
 
-# Sonata User
-sonata_user:
-    security_acl: true
-    manager_type: orm
