--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "friendsofsymfony/user-bundle": "dev-master as 1.3.2",
+        "friendsofsymfony/user-bundle": "1.3.2",
         "stof/doctrine-extensions-bundle": "^1.2",
         "sonata-project/admin-bundle": "^2.3",
         "sonata-project/doctrine-orm-admin-bundle": "^2.3",
