--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "stof/doctrine-extensions-bundle": "^1.2",
         "sonata-project/admin-bundle": "^2.3",
         "sonata-project/doctrine-orm-admin-bundle": "^2.3",
-        "sonata-project/user-bundle": "^2.2"
+        "sonata-project/user-bundle": "^2.2",
+        "knplabs/knp-menu-bundle": "1.1.x-dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
