--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -42,12 +42,17 @@ security:
         # Secured part of the site
         # This config requires being logged for the whole site and having the admin role for the admin part.
         # Change these rules to adapt them to your needs
-        # - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/admin/, role: ROLE_SONATA_ADMIN }
         - { path: ^/.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
 
 
     role_hierarchy:
-        ROLE_ADMIN:       [ROLE_USER, ROLE_SONATA_ADMIN]
+        ROLE_SONATA_ADMIN_REPORT_READER:
+            - ROLE_SONATA_ADMIN_REPORT_LIST
+            - ROLE_SONATA_ADMIN_REPORT_VIEW
+            - ROLE_SONATA_ADMIN
+        ROLE_STAFF: [ROLE_USER, ROLE_SONATA_ADMIN_REPORT_READER]
+        ROLE_ADMIN:       [ROLE_USER, ROLE_STAFF]
         ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     access_decision_manager:
