--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "sonata-project/admin-bundle": "^2.3",
         "sonata-project/doctrine-orm-admin-bundle": "^2.3",
         "sonata-project/user-bundle": "^2.2",
-        "knplabs/knp-menu-bundle": "1.1.x-dev"
+        "knplabs/knp-menu-bundle": "1.1.x-dev",
+        "egeloen/ckeditor-bundle": "^3.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
