--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,14 @@ app:
     resource: "@AppBundle/Controller/"
     type:     annotation
 
+gallery:
+    resource: '@SonataMediaBundle/Resources/config/routing/gallery.xml'
+    prefix: /media/gallery
+
+media:
+    resource: '@SonataMediaBundle/Resources/config/routing/media.xml'
+    prefix: /media
+
 sonata_user_security:
     resource: "@SonataUserBundle/Resources/config/routing/sonata_security_1.xml"
 
