--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "knplabs/knp-menu-bundle": "1.1.x-dev",
         "egeloen/ckeditor-bundle": "^3.0",
         "sonata-project/classification-bundle": "^2.2",
-        "sonata-project/intl-bundle": "^2.2"
+        "sonata-project/intl-bundle": "^2.2",
+        "sonata-project/media-bundle": "^2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
