--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
         "egeloen/ckeditor-bundle": "^3.0",
         "sonata-project/classification-bundle": "^2.2",
         "sonata-project/intl-bundle": "^2.2",
-        "sonata-project/media-bundle": "^2.3"
+        "sonata-project/media-bundle": "^2.3",
+        "tilleuls/ckeditor-sonata-media-bundle": "~1.0"
+
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
