--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+reports:
+    resource: "@AppBundle/Resources/config/routing.yml"
+    prefix: /
+
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
