--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,14 +1,12 @@
-# This file is a "template" of what your parameters.yml file should look like
-# Set parameters here that may be different on each deployment target of the app, e.g. development, staging, production.
-# http://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 parameters:
-    database_host:     localhost
-    database_port:     ~
-    database_name:     atlas_local
-    database_user:     root
-    database_password: root
-    mailer_transport:  smtp
-    mailer_host:       127.0.0.1
-    mailer_user:       ~
-    mailer_password:   ~
-    secret:            ThisTokenIsNotSoSecretChangeIt
+    database_driver: pdo_pgsql
+    database_host: agricultratlas.postgresql.db
+    database_port: 5432
+    database_name:     agricultratlas
+    database_user:     agricultratlas
+    database_password: ho3d1c2H
+    mailer_transport: gmail
+    mailer_user: hugo.lehoux
+    mailer_password: 'sqfs?892'
+    secret: 4a1826cc3e5937e9544fd9fa8b2e2df978a704a4
+    mailer_host: 127.0.0.1
