--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,8 @@
         "sonata-project/classification-bundle": "^2.2",
         "sonata-project/intl-bundle": "^2.2",
         "sonata-project/media-bundle": "^2.3",
-        "tilleuls/ckeditor-sonata-media-bundle": "~1.0"
+        "tilleuls/ckeditor-sonata-media-bundle": "~1.0",
+        "coresphere/console-bundle": "dev-master"
 
     },
     "require-dev": {
