--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
         "sonata-project/intl-bundle": "^2.2",
         "sonata-project/media-bundle": "^2.3",
         "tilleuls/ckeditor-sonata-media-bundle": "~1.0",
-        "coresphere/console-bundle": "dev-master"
+        "coresphere/console-bundle": "dev-master",
+        "oh/google-map-form-type-bundle": "dev-master"
 
     },
     "require-dev": {
