Users : Grant ROLE_EDITOR to every new user, added suited menus

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -134,7 +134,7 @@ sonata_block:
         #sonata.media.block.feature_media:
 sonata_admin:
     security:
-        handler: sonata.admin.security.handler.acl
+        handler: sonata.admin.security.handler.role
         # acl security information
         information:
             GUEST:    [VIEW, LIST]
