--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -42,18 +42,24 @@ security:
         # Secured part of the site
         # This config requires being logged for the whole site and having the admin role for the admin part.
         # Change these rules to adapt them to your needs
-        - { path: ^/admin/, role: ROLE_SONATA_ADMIN }
+        # { path: ^/admin/, role: ROLE_SONATA_ADMIN }
         - { path: ^/.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
 
 
     role_hierarchy:
+        ROLE_SUPER_ADMIN:       [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_ADMIN:             [ROLE_SONATA_ADMIN_REPORT_ADMIN, ROLE_EDITOR]
+        ROLE_EDITOR:            [ROLE_SONATA_ADMIN_REPORT_EDITOR, ROLE_USER]
+        ROLE_USER:              [ROLE_SONATA_ADMIN_REPORT_READER]
+        ROLE_SONATA_ADMIN_REPORT_ADMIN:
+            - ROLE_SONATA_ADMIN_REPORT_DELETE
+            - ROLE_SONATA_ADMIN_REPORT_EXPORT
+        ROLE_SONATA_ADMIN_REPORT_EDITOR:
+            - ROLE_SONATA_ADMIN_REPORT_CREATE
+            - ROLE_SONATA_ADMIN_REPORT_EDIT
         ROLE_SONATA_ADMIN_REPORT_READER:
             - ROLE_SONATA_ADMIN_REPORT_LIST
             - ROLE_SONATA_ADMIN_REPORT_VIEW
-            - ROLE_SONATA_ADMIN
-        ROLE_STAFF: [ROLE_USER, ROLE_SONATA_ADMIN_REPORT_READER]
-        ROLE_ADMIN:       [ROLE_USER, ROLE_STAFF]
-        ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     access_decision_manager:
         strategy: unanimous
