--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -15,6 +15,8 @@ security:
                 use_forward:    false
                 check_path:     /login_check
                 failure_path:   null
+                default_target_path: /admin/dashboard
+                always_use_default_target_path: true
             logout:       true
             anonymous:    true
 
