--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -50,9 +50,9 @@ security:
 
     role_hierarchy:
         ROLE_SUPER_ADMIN:       [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
-        ROLE_ADMIN:             [ROLE_SONATA_ADMIN_REPORT_ADMIN, ROLE_EDITOR]
-        ROLE_EDITOR:            [ROLE_SONATA_ADMIN_REPORT_EDITOR, ROLE_USER]
-        ROLE_USER:              [ROLE_SONATA_ADMIN_REPORT_READER]
+        ROLE_ADMIN:             [ROLE_SONATA_ADMIN_REPORT_ADMIN, ROLE_SONATA_MEDIA_ADMIN_MEDIA_ADMIN, ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_ADMIN,ROLE_SONATA_USER_ADMIN_USER_ADMIN, ROLE_EDITOR]
+        ROLE_EDITOR:            [ROLE_SONATA_ADMIN_REPORT_EDITOR,ROLE_SONATA_MEDIA_ADMIN_MEDIA_EDITOR, ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_EDITOR, ROLE_SONATA_USER_ADMIN_USER_EDITOR, ROLE_USER]
+        ROLE_USER:              [ROLE_SONATA_ADMIN_REPORT_READER, ROLE_SONATA_MEDIA_ADMIN_MEDIA_READER, ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_READER, ROLE_SONATA_USER_ADMIN_USER_READER]
         ROLE_SONATA_ADMIN_REPORT_ADMIN:
             - ROLE_SONATA_ADMIN_REPORT_DELETE
             - ROLE_SONATA_ADMIN_REPORT_EXPORT
@@ -62,6 +62,33 @@ security:
         ROLE_SONATA_ADMIN_REPORT_READER:
             - ROLE_SONATA_ADMIN_REPORT_LIST
             - ROLE_SONATA_ADMIN_REPORT_VIEW
+        ROLE_SONATA_MEDIA_ADMIN_MEDIA_ADMIN:
+            - ROLE_SONATA_MEDIA_ADMIN_MEDIA_DELETE
+            - ROLE_SONATA_MEDIA_ADMIN_MEDIA_EXPORT
+        ROLE_SONATA_MEDIA_ADMIN_MEDIA_EDITOR:
+            - ROLE_SONATA_MEDIA_ADMIN_MEDIA_CREATE
+            - ROLE_SONATA_MEDIA_ADMIN_MEDIA_EDIT
+        ROLE_SONATA_MEDIA_ADMIN_MEDIA_READER:
+            - ROLE_SONATA_MEDIA_ADMIN_MEDIA_LIST
+            - ROLE_SONATA_MEDIA_ADMIN_MEDIA_VIEW
+        ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_ADMIN:
+            - ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_DELETE
+            - ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_EXPORT
+        ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_EDITOR:
+            - ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_CREATE
+            - ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_EDIT
+        ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_READER:
+            - ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_LIST
+            - ROLE_SONATA_CLASSIFICATION_ADMIN_TAG_VIEW
+        ROLE_SONATA_USER_ADMIN_USER_ADMIN:
+            - ROLE_SONATA_USER_ADMIN_USER_DELETE
+            - ROLE_SONATA_USER_ADMIN_USER_EXPORT
+        ROLE_SONATA_USER_ADMIN_USER_EDITOR:
+            - ROLE_SONATA_USER_ADMIN_USER_CREATE
+            - ROLE_SONATA_USER_ADMIN_USER_EDIT
+        ROLE_SONATA_USER_ADMIN_USER_READER:
+            - ROLE_SONATA_USER_ADMIN_USER_LIST
+            - ROLE_SONATA_USER_ADMIN_USER_VIEW
 
     access_decision_manager:
         strategy: unanimous
